# sistemas-distribuidos-p1

./: .gitignore  README.md  gdbCommands
copiaDeSeguridad/: multMatrixStub.cpp
fileManager/: filemanager.cpp  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  mainClient.cpp  mainServer.cpp  main_fm.cpp  server.sh
fileManager/dirCliente/: archivoRick2.txt
fileManager/dirprueba/: archivoRick.txt  myNewFile.txt
multMatrix/: CMakeLists.txt  Makefile  cmake_install.cmake  defineOperations.h  mainClient.cpp  mainServer.cpp  main_multMatrix.cpp  multMatrix  multMatrixImp.cpp  multMatrixImp.h  multMatrixStub.cpp  multMatrixStub.h  multmatrix.cpp  multmatrix.h  pruebaVector.cpp  resultado  resultado.txt  resultado2.txt  serverMatrix  utils.cpp  utils.h
